[tool.poetry]
name = "tools"
version = "0.1.0"
description = "iSamples Tools"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
aiofile = "^3.8.5"
click = "^8.1.3"
beautifulsoup4 = "^4.12.2"


[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
